// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`addressables query makes the expected query to ES for a given set of query parameters 1`] = `
{
  "_source": [
    "display",
  ],
  "from": 30,
  "index": "test-addressables",
  "query": {
    "bool": {
      "must": [
        {
          "multi_match": {
            "fields": [
              "id",
              "uid",
              "query.title.*^100",
              "query.contributors.*^10",
              "query.contributors.keyword^100",
              "query.body.*",
              "query.description.*",
            ],
            "minimum_should_match": "-25%",
            "operator": "or",
            "query": "henry wellcome",
            "type": "cross_fields",
          },
        },
        {
          "term": {
            "query.linkedWorks": "work123",
          },
        },
      ],
      "must_not": [
        {
          "term": {
            "query.tags": "delist",
          },
        },
      ],
    },
  },
  "size": 30,
}
`;

exports[`articles query makes the expected query to ES for a given set of query parameters 1`] = `
{
  "_source": [
    "display",
  ],
  "aggregations": {
    "contributors.contributor": {
      "aggs": {
        "self_filter": {
          "aggs": {
            "terms": {
              "terms": {
                "field": "aggregatableValues.contributors",
                "include": ".*test-contributor.*",
                "min_doc_count": 0,
                "size": 20,
              },
            },
          },
          "filter": {
            "terms": {
              "filter.contributors": [
                "test-contributor",
              ],
            },
          },
        },
        "terms": {
          "terms": {
            "field": "aggregatableValues.contributors",
            "size": 20,
          },
        },
      },
      "filter": {
        "bool": {
          "filter": [
            {
              "terms": {
                "filter.format": [
                  "test-format",
                ],
              },
            },
          ],
        },
      },
    },
    "format": {
      "aggs": {
        "self_filter": {
          "aggs": {
            "terms": {
              "terms": {
                "field": "aggregatableValues.format",
                "include": ".*test-format.*",
                "min_doc_count": 0,
                "size": 20,
              },
            },
          },
          "filter": {
            "terms": {
              "filter.format": [
                "test-format",
              ],
            },
          },
        },
        "terms": {
          "terms": {
            "field": "aggregatableValues.format",
            "size": 20,
          },
        },
      },
      "filter": {
        "bool": {
          "filter": [
            {
              "terms": {
                "filter.contributors": [
                  "test-contributor",
                ],
              },
            },
          ],
        },
      },
    },
  },
  "from": 336,
  "index": "test-articles",
  "post_filter": {
    "bool": {
      "filter": [
        {
          "terms": {
            "filter.contributors": [
              "test-contributor",
            ],
          },
        },
        {
          "terms": {
            "filter.format": [
              "test-format",
            ],
          },
        },
      ],
    },
  },
  "query": {
    "bool": {
      "filter": [
        {
          "range": {
            "filter.publicationDate": {
              "gte": "2022-02-22T00:00:00.000Z",
              "lte": "2023-03-23T00:00:00.000Z",
            },
          },
        },
      ],
      "must": {
        "multi_match": {
          "fields": [
            "id",
            "query.title.*^100",
            "query.contributors.*^10",
            "query.contributors.keyword^100",
            "query.standfirst.*^10",
            "query.body.*",
            "query.caption.*",
            "query.series.id",
            "query.series.title.*^80",
            "query.series.contributors*^8",
            "query.series.contributors.keyword^80",
          ],
          "minimum_should_match": "-25%",
          "operator": "or",
          "query": "henry wellcome",
          "type": "cross_fields",
        },
      },
    },
  },
  "size": 42,
  "sort": [
    {
      "query.publicationDate": {
        "order": "asc",
      },
    },
    {
      "query.publicationDate": {
        "order": "desc",
      },
    },
  ],
}
`;

exports[`events query makes the expected query to ES for a given set of query parameters 1`] = `
{
  "_source": [
    "display",
  ],
  "aggregations": {
    "format": {
      "aggs": {
        "self_filter": {
          "aggs": {
            "terms": {
              "terms": {
                "field": "aggregatableValues.format",
                "include": ".*test-format.*",
                "min_doc_count": 0,
                "size": 20,
              },
            },
          },
          "filter": {
            "terms": {
              "filter.format": [
                "test-format",
              ],
            },
          },
        },
        "terms": {
          "terms": {
            "field": "aggregatableValues.format",
            "size": 20,
          },
        },
      },
      "filter": {
        "bool": {
          "filter": [
            {
              "terms": {
                "filter.interpretations": [
                  "test-interpretation",
                ],
              },
            },
            {
              "nested": {
                "path": "filter.times",
                "query": {
                  "bool": {
                    "must": [
                      {
                        "range": {
                          "filter.times.endDateTime": {
                            "lt": "now",
                          },
                        },
                      },
                    ],
                  },
                },
              },
            },
          ],
        },
      },
    },
    "interpretation": {
      "aggs": {
        "self_filter": {
          "aggs": {
            "terms": {
              "terms": {
                "field": "aggregatableValues.interpretations",
                "include": ".*test-interpretation.*",
                "min_doc_count": 0,
                "size": 20,
              },
            },
          },
          "filter": {
            "terms": {
              "filter.interpretations": [
                "test-interpretation",
              ],
            },
          },
        },
        "terms": {
          "terms": {
            "field": "aggregatableValues.interpretations",
            "size": 20,
          },
        },
      },
      "filter": {
        "bool": {
          "filter": [
            {
              "terms": {
                "filter.format": [
                  "test-format",
                ],
              },
            },
            {
              "nested": {
                "path": "filter.times",
                "query": {
                  "bool": {
                    "must": [
                      {
                        "range": {
                          "filter.times.endDateTime": {
                            "lt": "now",
                          },
                        },
                      },
                    ],
                  },
                },
              },
            },
          ],
        },
      },
    },
    "timespan": {
      "aggs": {
        "timespan": {
          "aggs": {
            "all": {
              "aggs": {
                "count_parent": {
                  "reverse_nested": {},
                },
              },
              "filter": {
                "match_all": {},
              },
            },
            "future": {
              "aggs": {
                "count_parent": {
                  "reverse_nested": {},
                },
              },
              "filter": {
                "bool": {
                  "filter": [
                    {
                      "range": {
                        "filter.times.endDateTime": {
                          "gt": "now",
                        },
                      },
                    },
                  ],
                },
              },
            },
            "past": {
              "aggs": {
                "count_parent": {
                  "reverse_nested": {},
                },
              },
              "filter": {
                "bool": {
                  "filter": [
                    {
                      "range": {
                        "filter.times.endDateTime": {
                          "lt": "now",
                        },
                      },
                    },
                  ],
                },
              },
            },
          },
          "nested": {
            "path": "filter.times",
          },
        },
      },
      "filter": {
        "bool": {
          "filter": [
            {
              "terms": {
                "filter.format": [
                  "test-format",
                ],
              },
            },
            {
              "terms": {
                "filter.interpretations": [
                  "test-interpretation",
                ],
              },
            },
          ],
        },
      },
    },
  },
  "from": 120,
  "index": "test-events",
  "post_filter": {
    "bool": {
      "filter": [
        {
          "terms": {
            "filter.format": [
              "test-format",
            ],
          },
        },
        {
          "terms": {
            "filter.interpretations": [
              "test-interpretation",
            ],
          },
        },
        {
          "nested": {
            "path": "filter.times",
            "query": {
              "bool": {
                "must": [
                  {
                    "range": {
                      "filter.times.endDateTime": {
                        "lt": "now",
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      ],
    },
  },
  "query": {
    "bool": {
      "filter": [
        {
          "bool": {
            "must_not": [
              {
                "term": {
                  "isChildScheduledEvent": true,
                },
              },
            ],
          },
        },
      ],
      "must": {
        "multi_match": {
          "fields": [
            "id",
            "query.title.*^100",
            "query.caption.*^10",
            "query.series.*^80",
            "query.series.contributors*^8",
            "query.series.contributors.keyword^80",
            "query.format.*^80",
            "query.audiences.*^80",
            "query.interpretations.*^80",
          ],
          "minimum_should_match": "-25%",
          "operator": "or",
          "query": "henry wellcome",
          "type": "cross_fields",
        },
      },
    },
  },
  "size": 20,
  "sort": [
    {
      "_score": {
        "order": "asc",
      },
    },
    {
      "query.times.startDateTime": {
        "nested": {
          "filter": {
            "range": {
              "query.times.endDateTime": {
                "gt": "now",
              },
            },
          },
          "path": "query.times",
        },
        "order": "asc",
      },
    },
  ],
}
`;
